// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff > diff snapshots > should match complete component update diff 1`] = `
[
  "--- ui/button.tsx",
  "+++ ui/button.tsx",
  "  import * as React from 'react';",
  "  import { Pressable } from 'react-native';",
  "- ",
  "+ import { cn } from '@/lib/utils';",
  "- export const Button = ({ children }) => {",
  "+ ",
  "-   return <Pressable>{children}</Pressable>;",
  "+ export interface ButtonProps",
  "- };",
  "+   extends React.ComponentPropsWithoutRef<typeof Pressable> {}",
  "+ ",
  "+ export const Button = React.forwardRef<",
  "+   React.ElementRef<typeof Pressable>,",
  "+   ButtonProps",
  "+ >(({ className, children, ...props }, ref) => {",
  "+   return (",
  "+     <Pressable ref={ref} className={cn('button', className)} {...props}>",
  "+       {children}",
  "+     </Pressable>",
  "+   );",
  "+ });",
  "+ Button.displayName = 'Button';",
]
`;

exports[`diff > diff snapshots > should match config file diff 1`] = `
[
  "--- components.json",
  "+++ components.json",
  "  {",
  "    "style": "nativewind",",
  "-   "typescript": true",
  "+   "typescript": true,",
  "- }",
  "+   "tailwind": {",
  "+     "config": "tailwind.config.js",",
  "+     "css": "global.css"",
  "+   },",
  "+   "aliases": {",
  "+     "components": "@/components",",
  "+     "utils": "@/lib/utils"",
  "+   }",
  "+ }",
]
`;

exports[`diff > formatChangeSummary > should format additions and modifications 1`] = `"5 added, 3 modified"`;

exports[`diff > formatChangeSummary > should format all zero changes 1`] = `""`;

exports[`diff > formatChangeSummary > should format multiple changes 1`] = `"3 added, 2 modified, 1 deleted"`;

exports[`diff > formatChangeSummary > should format single addition 1`] = `"1 added"`;

exports[`diff > formatChangeSummary > should format single deletion 1`] = `"1 deleted"`;

exports[`diff > formatChangeSummary > should format single modification 1`] = `"1 modified"`;

exports[`diff > generateDiff > should generate diff for added lines 1`] = `
[
  "--- test.txt",
  "+++ test.txt",
  "  line 1",
  "  line 2",
  "+ line 3",
]
`;

exports[`diff > generateDiff > should generate diff for component changes 1`] = `
[
  "--- button.tsx",
  "+++ button.tsx",
  "- export const Button = () => {",
  "+ export const Button = ({ className }) => {",
  "-   return <Pressable />;",
  "+   return <Pressable className={className} />;",
  "  };",
]
`;

exports[`diff > generateDiff > should generate diff for deleted lines 1`] = `
[
  "--- test.txt",
  "+++ test.txt",
  "  line 1",
  "  line 2",
  "- line 3",
]
`;

exports[`diff > generateDiff > should generate diff for identical content 1`] = `
[
  "--- test.txt",
  "+++ test.txt",
  "  line 1",
  "  line 2",
  "  line 3",
]
`;

exports[`diff > generateDiff > should generate diff for import changes 1`] = `
[
  "--- component.tsx",
  "+++ component.tsx",
  "  import React from 'react';",
  "- import { View } from 'react-native';",
  "+ import { View, Text } from 'react-native';",
  "+ import { cn } from '@/lib/utils';",
]
`;

exports[`diff > generateDiff > should generate diff for modified lines 1`] = `
[
  "--- test.txt",
  "+++ test.txt",
  "  line 1",
  "- line 2",
  "+ modified line 2",
  "  line 3",
]
`;
